// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Plots-ScatterChart label-散点图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "colorField": "Genre",
  "data": Array [
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 333.13,
      "Title": "Guardians of the Galaxy",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 126.46,
      "Title": "Prometheus",
    },
    Object {
      "Genre": "Horror",
      "Rating": 7.3,
      "Revenue (Millions)": 138.12,
      "Title": "Split",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.2,
      "Revenue (Millions)": 270.32,
      "Title": "Sing",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.2,
      "Revenue (Millions)": 325.02,
      "Title": "Suicide Squad",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.1,
      "Revenue (Millions)": 45.13,
      "Title": "The Great Wall",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 8.3,
      "Revenue (Millions)": 151.06,
      "Title": "La La Land",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.4,
      "Revenue (Millions)": null,
      "Title": "Mindhorn",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 8.01,
      "Title": "The Lost City of Z",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 100.01,
      "Title": "Passengers",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7.5,
      "Revenue (Millions)": 234.02,
      "Title": "Fantastic Beasts and Where to Find Them",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.8,
      "Revenue (Millions)": 169.27,
      "Title": "Hidden Figures",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 532.17,
      "Title": "Rogue One",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.7,
      "Revenue (Millions)": 248.75,
      "Title": "Moana",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.4,
      "Revenue (Millions)": 2.87,
      "Title": "Colossal",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.6,
      "Revenue (Millions)": 368.31,
      "Title": "The Secret Life of Pets",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.2,
      "Revenue (Millions)": 67.12,
      "Title": "Hacksaw Ridge",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 162.16,
      "Title": "Jason Bourne",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.1,
      "Revenue (Millions)": 51.69,
      "Title": "Lion",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 6.7,
      "Revenue (Millions)": 7.22,
      "Title": "Gold",
    },
    Object {
      "Genre": "Crime",
      "Rating": 6.7,
      "Revenue (Millions)": null,
      "Title": "Hounds of Love",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.5,
      "Revenue (Millions)": 153.69,
      "Title": "Trolls",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.3,
      "Revenue (Millions)": 103.14,
      "Title": "Independence Day: Resurgence",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.8,
      "Revenue (Millions)": null,
      "Title": "Paris pieds nus",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.3,
      "Revenue (Millions)": 6.5,
      "Title": "Bahubali: The Beginning",
    },
    Object {
      "Genre": "Horror",
      "Rating": 4.7,
      "Revenue (Millions)": 0.01,
      "Title": "Dead Awake",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.2,
      "Revenue (Millions)": 113.08,
      "Title": "Bad Moms",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.9,
      "Revenue (Millions)": 54.65,
      "Title": "Assassin's Creed",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.3,
      "Revenue (Millions)": 60.31,
      "Title": "Why Him?",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 155.33,
      "Title": "X-Men: Apocalypse",
    },
    Object {
      "Genre": "Action",
      "Rating": 8,
      "Revenue (Millions)": 363.02,
      "Title": "Deadpool",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.6,
      "Revenue (Millions)": 26.84,
      "Title": "Resident Evil: The Final Chapter",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 408.08,
      "Title": "Captain America: Civil War",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 8.6,
      "Revenue (Millions)": 187.99,
      "Title": "Interstellar",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.6,
      "Revenue (Millions)": 232.6,
      "Title": "Doctor Strange",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.9,
      "Revenue (Millions)": 93.38,
      "Title": "The Magnificent Seven",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 7.1,
      "Revenue (Millions)": null,
      "Title": "5- 25- 77",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.3,
      "Revenue (Millions)": 97.66,
      "Title": "Sausage Party",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.5,
      "Revenue (Millions)": 27.85,
      "Title": "Moonlight",
    },
    Object {
      "Genre": "Horror",
      "Rating": 2.7,
      "Revenue (Millions)": null,
      "Title": "Don't Fuck in the Woods",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.2,
      "Revenue (Millions)": 12.79,
      "Title": "The Founder",
    },
    Object {
      "Genre": "Other",
      "Rating": 6.3,
      "Revenue (Millions)": 4.21,
      "Title": "Lowriders",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 241.06,
      "Title": "Pirates of the Caribbean: On Stranger Tides",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.3,
      "Revenue (Millions)": 3.44,
      "Title": "Miss Sloane",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 5.6,
      "Revenue (Millions)": null,
      "Title": "Fallen",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 158.8,
      "Title": "Star Trek Beyond",
    },
    Object {
      "Genre": "Other",
      "Rating": 3.7,
      "Revenue (Millions)": null,
      "Title": "The Last Face",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 936.63,
      "Title": "Star Wars: Episode VII - The Force Awakens",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.8,
      "Revenue (Millions)": 30.35,
      "Title": "Underworld: Blood Wars",
    },
  ],
  "height": 500,
  "label": Object {
    "formatter": [Function],
    "offsetX": 10,
    "offsetY": 10,
    "style": Object {
      "fill": "red",
    },
    "visible": true,
  },
  "padding": Array [
    90,
    90,
    90,
    90,
  ],
  "regressionLine": undefined,
  "renderer": "canvas",
  "shape": "circle",
  "size": 4,
  "tooltip": Object {
    "crosshairs": Object {
      "type": "xy",
    },
    "showCrosshairs": true,
    "showMarkers": false,
    "showTitle": false,
  },
  "width": 500,
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "Revenue (Millions)",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "Rating",
}
`;

exports[`Plots-ScatterChart quadrant-散点图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "colorField": "Genre",
  "data": Array [
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 333.13,
      "Title": "Guardians of the Galaxy",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 126.46,
      "Title": "Prometheus",
    },
    Object {
      "Genre": "Horror",
      "Rating": 7.3,
      "Revenue (Millions)": 138.12,
      "Title": "Split",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.2,
      "Revenue (Millions)": 270.32,
      "Title": "Sing",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.2,
      "Revenue (Millions)": 325.02,
      "Title": "Suicide Squad",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.1,
      "Revenue (Millions)": 45.13,
      "Title": "The Great Wall",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 8.3,
      "Revenue (Millions)": 151.06,
      "Title": "La La Land",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.4,
      "Revenue (Millions)": null,
      "Title": "Mindhorn",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 8.01,
      "Title": "The Lost City of Z",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 100.01,
      "Title": "Passengers",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7.5,
      "Revenue (Millions)": 234.02,
      "Title": "Fantastic Beasts and Where to Find Them",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.8,
      "Revenue (Millions)": 169.27,
      "Title": "Hidden Figures",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 532.17,
      "Title": "Rogue One",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.7,
      "Revenue (Millions)": 248.75,
      "Title": "Moana",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.4,
      "Revenue (Millions)": 2.87,
      "Title": "Colossal",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.6,
      "Revenue (Millions)": 368.31,
      "Title": "The Secret Life of Pets",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.2,
      "Revenue (Millions)": 67.12,
      "Title": "Hacksaw Ridge",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 162.16,
      "Title": "Jason Bourne",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.1,
      "Revenue (Millions)": 51.69,
      "Title": "Lion",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 6.7,
      "Revenue (Millions)": 7.22,
      "Title": "Gold",
    },
    Object {
      "Genre": "Crime",
      "Rating": 6.7,
      "Revenue (Millions)": null,
      "Title": "Hounds of Love",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.5,
      "Revenue (Millions)": 153.69,
      "Title": "Trolls",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.3,
      "Revenue (Millions)": 103.14,
      "Title": "Independence Day: Resurgence",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.8,
      "Revenue (Millions)": null,
      "Title": "Paris pieds nus",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.3,
      "Revenue (Millions)": 6.5,
      "Title": "Bahubali: The Beginning",
    },
    Object {
      "Genre": "Horror",
      "Rating": 4.7,
      "Revenue (Millions)": 0.01,
      "Title": "Dead Awake",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.2,
      "Revenue (Millions)": 113.08,
      "Title": "Bad Moms",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.9,
      "Revenue (Millions)": 54.65,
      "Title": "Assassin's Creed",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.3,
      "Revenue (Millions)": 60.31,
      "Title": "Why Him?",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 155.33,
      "Title": "X-Men: Apocalypse",
    },
    Object {
      "Genre": "Action",
      "Rating": 8,
      "Revenue (Millions)": 363.02,
      "Title": "Deadpool",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.6,
      "Revenue (Millions)": 26.84,
      "Title": "Resident Evil: The Final Chapter",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 408.08,
      "Title": "Captain America: Civil War",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 8.6,
      "Revenue (Millions)": 187.99,
      "Title": "Interstellar",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.6,
      "Revenue (Millions)": 232.6,
      "Title": "Doctor Strange",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.9,
      "Revenue (Millions)": 93.38,
      "Title": "The Magnificent Seven",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 7.1,
      "Revenue (Millions)": null,
      "Title": "5- 25- 77",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.3,
      "Revenue (Millions)": 97.66,
      "Title": "Sausage Party",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.5,
      "Revenue (Millions)": 27.85,
      "Title": "Moonlight",
    },
    Object {
      "Genre": "Horror",
      "Rating": 2.7,
      "Revenue (Millions)": null,
      "Title": "Don't Fuck in the Woods",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.2,
      "Revenue (Millions)": 12.79,
      "Title": "The Founder",
    },
    Object {
      "Genre": "Other",
      "Rating": 6.3,
      "Revenue (Millions)": 4.21,
      "Title": "Lowriders",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 241.06,
      "Title": "Pirates of the Caribbean: On Stranger Tides",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.3,
      "Revenue (Millions)": 3.44,
      "Title": "Miss Sloane",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 5.6,
      "Revenue (Millions)": null,
      "Title": "Fallen",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 158.8,
      "Title": "Star Trek Beyond",
    },
    Object {
      "Genre": "Other",
      "Rating": 3.7,
      "Revenue (Millions)": null,
      "Title": "The Last Face",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 936.63,
      "Title": "Star Wars: Episode VII - The Force Awakens",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.8,
      "Revenue (Millions)": 30.35,
      "Title": "Underworld: Blood Wars",
    },
  ],
  "height": 500,
  "padding": Array [
    90,
    90,
    90,
    90,
  ],
  "quadrant": Object {
    "label": Object {
      "style": Object {
        "fill": "#ccc",
        "fontSize": 16,
        "opacity": 0.6,
      },
      "text": Array [
        "第一象限",
        "第二象限",
        "第三象限",
        "第四0象限",
      ],
    },
    "labels": Array [
      Object {
        "content": "第一象限",
        "style": Object {
          "fill": "red",
        },
      },
      Object {
        "content": "第二象限",
      },
      Object {
        "content": "第三象限",
      },
      Object {
        "content": "第四象限",
      },
    ],
    "lineStyle": Object {
      "fill": "red",
      "stroke": "red",
    },
    "regionStyle": Array [
      Object {
        "stroke": "pink",
      },
      Object {
        "fill": "blue",
      },
      Object {
        "fill": "green",
      },
      Object {
        "fill": "yellow",
      },
    ],
    "xBaseline": 500,
    "yBaseline": 5,
  },
  "regressionLine": undefined,
  "renderer": "canvas",
  "shape": "circle",
  "size": 4,
  "tooltip": Object {
    "crosshairs": Object {
      "type": "xy",
    },
    "showCrosshairs": true,
    "showMarkers": false,
    "showTitle": false,
  },
  "width": 500,
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "Revenue (Millions)",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "Rating",
}
`;

exports[`Plots-ScatterChart trendline-散点图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "colorField": "Genre",
  "data": Array [
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 333.13,
      "Title": "Guardians of the Galaxy",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 126.46,
      "Title": "Prometheus",
    },
    Object {
      "Genre": "Horror",
      "Rating": 7.3,
      "Revenue (Millions)": 138.12,
      "Title": "Split",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.2,
      "Revenue (Millions)": 270.32,
      "Title": "Sing",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.2,
      "Revenue (Millions)": 325.02,
      "Title": "Suicide Squad",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.1,
      "Revenue (Millions)": 45.13,
      "Title": "The Great Wall",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 8.3,
      "Revenue (Millions)": 151.06,
      "Title": "La La Land",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.4,
      "Revenue (Millions)": null,
      "Title": "Mindhorn",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 8.01,
      "Title": "The Lost City of Z",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 100.01,
      "Title": "Passengers",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7.5,
      "Revenue (Millions)": 234.02,
      "Title": "Fantastic Beasts and Where to Find Them",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.8,
      "Revenue (Millions)": 169.27,
      "Title": "Hidden Figures",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 532.17,
      "Title": "Rogue One",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.7,
      "Revenue (Millions)": 248.75,
      "Title": "Moana",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.4,
      "Revenue (Millions)": 2.87,
      "Title": "Colossal",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.6,
      "Revenue (Millions)": 368.31,
      "Title": "The Secret Life of Pets",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.2,
      "Revenue (Millions)": 67.12,
      "Title": "Hacksaw Ridge",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 162.16,
      "Title": "Jason Bourne",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.1,
      "Revenue (Millions)": 51.69,
      "Title": "Lion",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 6.7,
      "Revenue (Millions)": 7.22,
      "Title": "Gold",
    },
    Object {
      "Genre": "Crime",
      "Rating": 6.7,
      "Revenue (Millions)": null,
      "Title": "Hounds of Love",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.5,
      "Revenue (Millions)": 153.69,
      "Title": "Trolls",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.3,
      "Revenue (Millions)": 103.14,
      "Title": "Independence Day: Resurgence",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.8,
      "Revenue (Millions)": null,
      "Title": "Paris pieds nus",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.3,
      "Revenue (Millions)": 6.5,
      "Title": "Bahubali: The Beginning",
    },
    Object {
      "Genre": "Horror",
      "Rating": 4.7,
      "Revenue (Millions)": 0.01,
      "Title": "Dead Awake",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.2,
      "Revenue (Millions)": 113.08,
      "Title": "Bad Moms",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.9,
      "Revenue (Millions)": 54.65,
      "Title": "Assassin's Creed",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.3,
      "Revenue (Millions)": 60.31,
      "Title": "Why Him?",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 155.33,
      "Title": "X-Men: Apocalypse",
    },
    Object {
      "Genre": "Action",
      "Rating": 8,
      "Revenue (Millions)": 363.02,
      "Title": "Deadpool",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.6,
      "Revenue (Millions)": 26.84,
      "Title": "Resident Evil: The Final Chapter",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 408.08,
      "Title": "Captain America: Civil War",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 8.6,
      "Revenue (Millions)": 187.99,
      "Title": "Interstellar",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.6,
      "Revenue (Millions)": 232.6,
      "Title": "Doctor Strange",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.9,
      "Revenue (Millions)": 93.38,
      "Title": "The Magnificent Seven",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 7.1,
      "Revenue (Millions)": null,
      "Title": "5- 25- 77",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.3,
      "Revenue (Millions)": 97.66,
      "Title": "Sausage Party",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.5,
      "Revenue (Millions)": 27.85,
      "Title": "Moonlight",
    },
    Object {
      "Genre": "Horror",
      "Rating": 2.7,
      "Revenue (Millions)": null,
      "Title": "Don't Fuck in the Woods",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.2,
      "Revenue (Millions)": 12.79,
      "Title": "The Founder",
    },
    Object {
      "Genre": "Other",
      "Rating": 6.3,
      "Revenue (Millions)": 4.21,
      "Title": "Lowriders",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 241.06,
      "Title": "Pirates of the Caribbean: On Stranger Tides",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.3,
      "Revenue (Millions)": 3.44,
      "Title": "Miss Sloane",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 5.6,
      "Revenue (Millions)": null,
      "Title": "Fallen",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 158.8,
      "Title": "Star Trek Beyond",
    },
    Object {
      "Genre": "Other",
      "Rating": 3.7,
      "Revenue (Millions)": null,
      "Title": "The Last Face",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 936.63,
      "Title": "Star Wars: Episode VII - The Force Awakens",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.8,
      "Revenue (Millions)": 30.35,
      "Title": "Underworld: Blood Wars",
    },
  ],
  "height": 500,
  "padding": Array [
    90,
    90,
    90,
    90,
  ],
  "regressionLine": Object {
    "confidenceStyle": Object {
      "fill": "red",
      "opacity": 0.1,
    },
    "showConfidence": true,
    "style": Object {
      "lineWidth": 1,
      "stroke": "black",
    },
    "type": "poly",
  },
  "renderer": "canvas",
  "shape": "circle",
  "size": 4,
  "tooltip": Object {
    "crosshairs": Object {
      "type": "xy",
    },
    "showCrosshairs": true,
    "showMarkers": false,
    "showTitle": false,
  },
  "trendline": Object {
    "confidenceStyle": Object {
      "fill": "red",
      "opacity": 0.1,
    },
    "showConfidence": true,
    "style": Object {
      "lineWidth": 1,
      "stroke": "black",
    },
    "type": "poly",
  },
  "width": 500,
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "Revenue (Millions)",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "Rating",
}
`;

exports[`Plots-ScatterChart xAxis-散点图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "colorField": "Genre",
  "data": Array [
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 333.13,
      "Title": "Guardians of the Galaxy",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 126.46,
      "Title": "Prometheus",
    },
    Object {
      "Genre": "Horror",
      "Rating": 7.3,
      "Revenue (Millions)": 138.12,
      "Title": "Split",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.2,
      "Revenue (Millions)": 270.32,
      "Title": "Sing",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.2,
      "Revenue (Millions)": 325.02,
      "Title": "Suicide Squad",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.1,
      "Revenue (Millions)": 45.13,
      "Title": "The Great Wall",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 8.3,
      "Revenue (Millions)": 151.06,
      "Title": "La La Land",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.4,
      "Revenue (Millions)": null,
      "Title": "Mindhorn",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 8.01,
      "Title": "The Lost City of Z",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 100.01,
      "Title": "Passengers",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7.5,
      "Revenue (Millions)": 234.02,
      "Title": "Fantastic Beasts and Where to Find Them",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.8,
      "Revenue (Millions)": 169.27,
      "Title": "Hidden Figures",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 532.17,
      "Title": "Rogue One",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.7,
      "Revenue (Millions)": 248.75,
      "Title": "Moana",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.4,
      "Revenue (Millions)": 2.87,
      "Title": "Colossal",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.6,
      "Revenue (Millions)": 368.31,
      "Title": "The Secret Life of Pets",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.2,
      "Revenue (Millions)": 67.12,
      "Title": "Hacksaw Ridge",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 162.16,
      "Title": "Jason Bourne",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.1,
      "Revenue (Millions)": 51.69,
      "Title": "Lion",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 6.7,
      "Revenue (Millions)": 7.22,
      "Title": "Gold",
    },
    Object {
      "Genre": "Crime",
      "Rating": 6.7,
      "Revenue (Millions)": null,
      "Title": "Hounds of Love",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.5,
      "Revenue (Millions)": 153.69,
      "Title": "Trolls",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.3,
      "Revenue (Millions)": 103.14,
      "Title": "Independence Day: Resurgence",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.8,
      "Revenue (Millions)": null,
      "Title": "Paris pieds nus",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.3,
      "Revenue (Millions)": 6.5,
      "Title": "Bahubali: The Beginning",
    },
    Object {
      "Genre": "Horror",
      "Rating": 4.7,
      "Revenue (Millions)": 0.01,
      "Title": "Dead Awake",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.2,
      "Revenue (Millions)": 113.08,
      "Title": "Bad Moms",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.9,
      "Revenue (Millions)": 54.65,
      "Title": "Assassin's Creed",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.3,
      "Revenue (Millions)": 60.31,
      "Title": "Why Him?",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 155.33,
      "Title": "X-Men: Apocalypse",
    },
    Object {
      "Genre": "Action",
      "Rating": 8,
      "Revenue (Millions)": 363.02,
      "Title": "Deadpool",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.6,
      "Revenue (Millions)": 26.84,
      "Title": "Resident Evil: The Final Chapter",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 408.08,
      "Title": "Captain America: Civil War",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 8.6,
      "Revenue (Millions)": 187.99,
      "Title": "Interstellar",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.6,
      "Revenue (Millions)": 232.6,
      "Title": "Doctor Strange",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.9,
      "Revenue (Millions)": 93.38,
      "Title": "The Magnificent Seven",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 7.1,
      "Revenue (Millions)": null,
      "Title": "5- 25- 77",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.3,
      "Revenue (Millions)": 97.66,
      "Title": "Sausage Party",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.5,
      "Revenue (Millions)": 27.85,
      "Title": "Moonlight",
    },
    Object {
      "Genre": "Horror",
      "Rating": 2.7,
      "Revenue (Millions)": null,
      "Title": "Don't Fuck in the Woods",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.2,
      "Revenue (Millions)": 12.79,
      "Title": "The Founder",
    },
    Object {
      "Genre": "Other",
      "Rating": 6.3,
      "Revenue (Millions)": 4.21,
      "Title": "Lowriders",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 241.06,
      "Title": "Pirates of the Caribbean: On Stranger Tides",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.3,
      "Revenue (Millions)": 3.44,
      "Title": "Miss Sloane",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 5.6,
      "Revenue (Millions)": null,
      "Title": "Fallen",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 158.8,
      "Title": "Star Trek Beyond",
    },
    Object {
      "Genre": "Other",
      "Rating": 3.7,
      "Revenue (Millions)": null,
      "Title": "The Last Face",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 936.63,
      "Title": "Star Wars: Episode VII - The Force Awakens",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.8,
      "Revenue (Millions)": 30.35,
      "Title": "Underworld: Blood Wars",
    },
  ],
  "height": 500,
  "padding": Array [
    90,
    90,
    90,
    90,
  ],
  "regressionLine": undefined,
  "renderer": "canvas",
  "shape": "circle",
  "size": 4,
  "tooltip": Object {
    "crosshairs": Object {
      "type": "xy",
    },
    "showCrosshairs": true,
    "showMarkers": false,
    "showTitle": false,
  },
  "width": 500,
  "xAxis": Object {
    "grid": Object {
      "line": Object {
        "style": Object {
          "lineDash": Array [
            4,
            5,
          ],
          "lineWidth": 2,
          "stroke": "orange",
        },
      },
      "visible": true,
    },
    "label": Object {
      "autoHide": true,
      "autoRotate": true,
      "formatter": [Function],
      "offset": 20,
      "style": Object {
        "fill": "red",
      },
      "suffix": "%",
      "visible": true,
    },
    "line": Object {
      "style": Object {
        "cursor": "pointer",
        "lineDash": Array [
          4,
          5,
        ],
        "lineWidth": 2,
        "shadowBlur": 10,
        "shadowColor": "black",
        "shadowOffsetX": 5,
        "shadowOffsetY": 5,
        "stroke": "black",
        "strokeOpacity": 0.7,
      },
      "visible": true,
    },
    "nice": true,
    "tickLine": Object {
      "style": Object {
        "fill": "red",
        "stroke": "red",
      },
      "visible": true,
    },
    "title": Object {
      "offset": 50,
      "style": Object {
        "fill": "blue",
      },
      "text": "名称11",
      "visible": true,
    },
  },
  "xField": "Revenue (Millions)",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "Rating",
}
`;

exports[`Plots-ScatterChart 基础散点图 1`] = `
Object {
  "animation": true,
  "appendPadding": Array [
    10,
    5,
    10,
    10,
  ],
  "autoFit": true,
  "color": Array [
    "red",
    "green",
    "yellow",
    "black",
    "orange",
  ],
  "colorField": "Genre",
  "data": Array [
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 333.13,
      "Title": "Guardians of the Galaxy",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 126.46,
      "Title": "Prometheus",
    },
    Object {
      "Genre": "Horror",
      "Rating": 7.3,
      "Revenue (Millions)": 138.12,
      "Title": "Split",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.2,
      "Revenue (Millions)": 270.32,
      "Title": "Sing",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.2,
      "Revenue (Millions)": 325.02,
      "Title": "Suicide Squad",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.1,
      "Revenue (Millions)": 45.13,
      "Title": "The Great Wall",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 8.3,
      "Revenue (Millions)": 151.06,
      "Title": "La La Land",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.4,
      "Revenue (Millions)": null,
      "Title": "Mindhorn",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 8.01,
      "Title": "The Lost City of Z",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7,
      "Revenue (Millions)": 100.01,
      "Title": "Passengers",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 7.5,
      "Revenue (Millions)": 234.02,
      "Title": "Fantastic Beasts and Where to Find Them",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.8,
      "Revenue (Millions)": 169.27,
      "Title": "Hidden Figures",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 532.17,
      "Title": "Rogue One",
    },
    Object {
      "Genre": "Animation",
      "Rating": 7.7,
      "Revenue (Millions)": 248.75,
      "Title": "Moana",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.4,
      "Revenue (Millions)": 2.87,
      "Title": "Colossal",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.6,
      "Revenue (Millions)": 368.31,
      "Title": "The Secret Life of Pets",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.2,
      "Revenue (Millions)": 67.12,
      "Title": "Hacksaw Ridge",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 162.16,
      "Title": "Jason Bourne",
    },
    Object {
      "Genre": "Other",
      "Rating": 8.1,
      "Revenue (Millions)": 51.69,
      "Title": "Lion",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 6.7,
      "Revenue (Millions)": 7.22,
      "Title": "Gold",
    },
    Object {
      "Genre": "Crime",
      "Rating": 6.7,
      "Revenue (Millions)": null,
      "Title": "Hounds of Love",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.5,
      "Revenue (Millions)": 153.69,
      "Title": "Trolls",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.3,
      "Revenue (Millions)": 103.14,
      "Title": "Independence Day: Resurgence",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.8,
      "Revenue (Millions)": null,
      "Title": "Paris pieds nus",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.3,
      "Revenue (Millions)": 6.5,
      "Title": "Bahubali: The Beginning",
    },
    Object {
      "Genre": "Horror",
      "Rating": 4.7,
      "Revenue (Millions)": 0.01,
      "Title": "Dead Awake",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.2,
      "Revenue (Millions)": 113.08,
      "Title": "Bad Moms",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.9,
      "Revenue (Millions)": 54.65,
      "Title": "Assassin's Creed",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 6.3,
      "Revenue (Millions)": 60.31,
      "Title": "Why Him?",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 155.33,
      "Title": "X-Men: Apocalypse",
    },
    Object {
      "Genre": "Action",
      "Rating": 8,
      "Revenue (Millions)": 363.02,
      "Title": "Deadpool",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.6,
      "Revenue (Millions)": 26.84,
      "Title": "Resident Evil: The Final Chapter",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.9,
      "Revenue (Millions)": 408.08,
      "Title": "Captain America: Civil War",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 8.6,
      "Revenue (Millions)": 187.99,
      "Title": "Interstellar",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.6,
      "Revenue (Millions)": 232.6,
      "Title": "Doctor Strange",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.9,
      "Revenue (Millions)": 93.38,
      "Title": "The Magnificent Seven",
    },
    Object {
      "Genre": "Comedy",
      "Rating": 7.1,
      "Revenue (Millions)": null,
      "Title": "5- 25- 77",
    },
    Object {
      "Genre": "Animation",
      "Rating": 6.3,
      "Revenue (Millions)": 97.66,
      "Title": "Sausage Party",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.5,
      "Revenue (Millions)": 27.85,
      "Title": "Moonlight",
    },
    Object {
      "Genre": "Horror",
      "Rating": 2.7,
      "Revenue (Millions)": null,
      "Title": "Don't Fuck in the Woods",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.2,
      "Revenue (Millions)": 12.79,
      "Title": "The Founder",
    },
    Object {
      "Genre": "Other",
      "Rating": 6.3,
      "Revenue (Millions)": 4.21,
      "Title": "Lowriders",
    },
    Object {
      "Genre": "Action",
      "Rating": 6.7,
      "Revenue (Millions)": 241.06,
      "Title": "Pirates of the Caribbean: On Stranger Tides",
    },
    Object {
      "Genre": "Other",
      "Rating": 7.3,
      "Revenue (Millions)": 3.44,
      "Title": "Miss Sloane",
    },
    Object {
      "Genre": "Adventure",
      "Rating": 5.6,
      "Revenue (Millions)": null,
      "Title": "Fallen",
    },
    Object {
      "Genre": "Action",
      "Rating": 7.1,
      "Revenue (Millions)": 158.8,
      "Title": "Star Trek Beyond",
    },
    Object {
      "Genre": "Other",
      "Rating": 3.7,
      "Revenue (Millions)": null,
      "Title": "The Last Face",
    },
    Object {
      "Genre": "Action",
      "Rating": 8.1,
      "Revenue (Millions)": 936.63,
      "Title": "Star Wars: Episode VII - The Force Awakens",
    },
    Object {
      "Genre": "Action",
      "Rating": 5.8,
      "Revenue (Millions)": 30.35,
      "Title": "Underworld: Blood Wars",
    },
  ],
  "height": 500,
  "meta": Object {
    "Rating": Object {
      "formatter": [Function],
    },
  },
  "padding": Array [
    90,
    90,
    90,
    90,
  ],
  "pixelRatio": 3,
  "pointStyle": Object {
    "strokeOpacity": 0.5,
  },
  "regressionLine": undefined,
  "renderer": "svg",
  "shape": "circle",
  "size": Array [
    5,
    10,
  ],
  "sizeField": "Rating",
  "tooltip": Object {
    "crosshairs": Object {
      "type": "xy",
    },
    "showCrosshairs": true,
    "showMarkers": false,
    "showTitle": false,
  },
  "width": 500,
  "xAxis": Object {
    "label": Object {
      "autoHide": Object {
        "cfg": Object {
          "minGap": 6,
        },
        "type": "equidistance",
      },
      "autoRotate": false,
    },
    "nice": true,
  },
  "xField": "Revenue (Millions)",
  "yAxis": Object {
    "label": Object {
      "autoHide": true,
      "autoRotate": false,
    },
    "nice": true,
  },
  "yField": "Rating",
}
`;
